<resources>
    <string name="search">Search</string>
    <string name="app_name">"AllTrans"</string>
    <string name="clear_cache_success">"Please force-close the translated app. Its translation cache will be cleared the next time the app starts."</string>
    <string name="wut_why_null">"Could not load the Per-app preference page. Close and re-open application again."</string>
    <string name="app_icon">"App Icon"</string>
    <string name="example_application">"Example Application"</string>
    <string name="description">"Description"</string>
    <string name="apps_to_translate">"Apps"</string>
    <string name="global_settings">"Global"</string>
    <string name="instructions">"Instructions"</string>
    <string name="pref_cat_translate_settings">"Translate Settings"</string>
    <string name="pref_cat_troubleshooting_info">"Translate Settings to Fix Apps Crashing or Not Translating"</string>
    <string name="pref_cat_advanced_settings">"Advanced Settings"</string>
    <string name="master_on_off">"Master On/Off"</string>
    <string name="master_on_off_summary_off">"Module is turned off, no apps will be translated. Turn on to start using auto-translate!"</string>
    <string name="master_on_off_summary_on">"Module is turned on, selected apps will be translated. Turn off to completely disable this module."</string>
    <string name="translator_provider">"Translation Service Provider"</string>
    <string name="translator_provider_summary">"Choose which translation service to use: Google Translate, Microsoft Translate, or VietPhrase"</string>
    <string name="translator_provider_google">Google Translate\nUses the built-in Google integration. Requires an Internet connection.</string>
    <string name="translator_provider_microsoft">Microsoft Translate\nUses the built-in Microsoft integration. Requires an Internet connection.</string>
    <string name="translator_provider_vietphrase">VietPhrase\nUses local dictionary files for one-way Chinese to Vietnamese translation. No Internet connection is required.</string>
    <string name="downloading">"Processing translation data. Please wait"</string>
    <string name="transFrom">"Translate From Language"</string>
    <string name="transFrom_summary">"Language the app is originally in."</string>
    <string name="transTo">"Translate To Language"</string>
    <string name="transTo_summary">"Language you want the app to be translate into."</string>
    <string name="setText">"Translate Normal Text"</string>
    <string name="setText_summary_off">"Not Translating Text written using Set Text. Turn on to enable."</string>
    <string name="setText_summary_on">"Translating Text written using Set Text - Safe. Turn off to disable."</string>
    <string name="setHint">"Translate Text Hints (Gray-Coloured Suggestions) in Text Boxes"</string>
    <string name="setHint_summary_off">"Not Translating Text written using Set Hint. Turn on to enable."</string>
    <string name="setHint_summary_on">"Translating Text written using Set Hint - Safe. Turn off to disable."</string>
    <string name="extended_view_translation">"Extended View Translation"</string>
    <string name="extended_view_translation_summary_off">"Only use the original TextView and setText translation path. Extended hooks such as StaticLayout.Builder.build(), layout constructors, framework View methods and custom View setters are disabled."</string>
    <string name="extended_view_translation_summary_on">"Enable additional translation hooks outside the original TextView path, including StaticLayout.Builder.build(), layout constructors, framework View methods and custom View setters."</string>
    <string name="webView">"Translate Text in Web Pages inside Apps"</string>
    <string name="webView_summary_off">"Not Translating Text in WebViews. Turn on to enable."</string>
    <string name="webView_summary_on">"Translating Text inside WebView - Safe, May Not Work Always. Turn off to disable."</string>
    <string name="notif">"Translate Notifications"</string>
    <string name="notif_summary_off">"Not Translating Text in Notifications. Turn on to enable."</string>
    <string name="notif_summary_on">"Translating Text inside Notifications - Safe, May sometimes crash apps. Turn off to disable."</string>
    <string name="caching">"Use Caching"</string>
    <string name="caching_summary_off">"Not caching translated text. Translation may be slower and use more network data, but this can help with some apps. Turn on to cache translations."</string>
    <string name="caching_summary_on">"Caching translated text to improve speed and reduce repeated network requests. Turn off if a translated app becomes unstable."</string>
    <string name="delay">"Delay Before Replacing with Translated Text"</string>
    <string name="delay_summary">"Set the time in milliseconds to wait before replace with translated text. Default Value is 0. Set to 1000–5000 if the translated app is crashing."</string>
    <string name="delay_webview">"Delay Before Starting to Translate WebViews"</string>
    <string name="delay_webview_summary">"Set the time in milliseconds to wait before starting to translate WebViews. Default Value is 500. Set to 0 to increase translation speed. Set to 3000-5000 if part of web app are not translating."</string>
    <string name="scroll">"Scroll Long Translated Text"</string>
    <string name="scroll_summary_off">"Not scrolling translated text if it is too long. Text may be truncated, but will not interfere with the app&apos;s scrolling/clicking. Turn on to scroll long translations."</string>
    <string name="scroll_summary_on">"Scrolling translated text if it is too long. This may interfere with the app&apos;s scrolling/clicking. Turn off to disable this scrolling."</string>
    <string name="debug">"Advanced : Turn on Debug Mode."</string>
    <string name="debug_summary_off">"Debug mode is off. Not writing debug data to logcat. Turn this on before sending error reports"</string>
    <string name="debug_summary_on">"Debug mode is on. Writing logs to logcat. This decreases performance - turn off if not needed."</string>
    <string name="local_on_off">"Translate This App"</string>
    <string name="local_on_off_summary">"Turn off to stop translating this app"</string>
    <string name="local_on_off_summary_off">"This app will not translated. Turn on to start using auto-translate!"</string>
    <string name="local_on_off_summary_on">"This will be translated. Turn off to completely disable translating this app."</string>
    <string name="overRide_global">"OverRide Global Settings"</string>
    <string name="overRide_global_summary_off">"Using Global Settings for this app. Turn on to change settings only for this app."</string>
    <string name="overRide_global_summary_on">"Using Local Settings for this app. Turn off to use Global Settings."</string>
    <string name="clear_cache">"Click to clear Translation Cache"</string>
    <string name="clear_cache_summary">"Click to clear the app&apos;s translation cache. Use this after changing translation settings or if the app does not start correctly."</string>
    <string name="clear_cache_provider">"Translation cache will be cleared because the provider changed."</string>
    <string name="Automatic_google">Automatic (Google)</string>
    <string name="Afrikaans_google">"Afrikaans"</string>
    <string name="Arabic_google">"Arabic"</string>
    <string name="Belarusian_google">"Belarusian"</string>
    <string name="Bulgarian_google">"Bulgarian"</string>
    <string name="Bengali_google">"Bengali"</string>
    <string name="Catalan_google">"Catalan"</string>
    <string name="Czech_google">"Czech"</string>
    <string name="Welsh_google">"Welsh"</string>
    <string name="Danish_google">"Danish"</string>
    <string name="German_google">"German"</string>
    <string name="Greek_google">"Greek"</string>
    <string name="English_google">"English"</string>
    <string name="Esperanto_google">"Esperanto"</string>
    <string name="Spanish_google">"Spanish"</string>
    <string name="Estonian_google">"Estonian"</string>
    <string name="Persian_google">"Persian"</string>
    <string name="Finnish_google">"Finnish"</string>
    <string name="French_google">"French"</string>
    <string name="Irish_google">"Irish"</string>
    <string name="Galician_google">"Galician"</string>
    <string name="Gujarati_google">"Gujarati"</string>
    <string name="Hebrew_google">"Hebrew"</string>
    <string name="Hindi_google">"Hindi"</string>
    <string name="Croatian_google">"Croatian"</string>
    <string name="Haitian_google">"Haitian"</string>
    <string name="Hungarian_google">"Hungarian"</string>
    <string name="Indonesian_google">"Indonesian"</string>
    <string name="Icelandic_google">"Icelandic"</string>
    <string name="Italian_google">"Italian"</string>
    <string name="Japanese_google">"Japanese"</string>
    <string name="Georgian_google">"Georgian"</string>
    <string name="Kannada_google">"Kannada"</string>
    <string name="Korean_google">"Korean"</string>
    <string name="Lithuanian_google">"Lithuanian"</string>
    <string name="Latvian_google">"Latvian"</string>
    <string name="Macedonian_google">"Macedonian"</string>
    <string name="Marathi_google">"Marathi"</string>
    <string name="Malay_google">"Malay"</string>
    <string name="Maltese_google">"Maltese"</string>
    <string name="Dutch_google">"Dutch"</string>
    <string name="Norwegian_google">"Norwegian"</string>
    <string name="Polish_google">"Polish"</string>
    <string name="Portuguese_google">"Portuguese"</string>
    <string name="Romanian_google">"Romanian"</string>
    <string name="Russian_google">"Russian"</string>
    <string name="Slovak_google">"Slovak"</string>
    <string name="Slovenian_google">"Slovenian"</string>
    <string name="Albanian_google">"Albanian"</string>
    <string name="Swedish_google">"Swedish"</string>
    <string name="Swahili_google">"Swahili"</string>
    <string name="Tamil_google">"Tamil"</string>
    <string name="Telugu_google">"Telugu"</string>
    <string name="Thai_google">"Thai"</string>
    <string name="Tagalog_google">"Tagalog"</string>
    <string name="Turkish_google">"Turkish"</string>
    <string name="Ukrainian_google">"Ukrainian"</string>
    <string name="Urdu_google">"Urdu"</string>
    <string name="Vietnamese_google">"Vietnamese"</string>
    <string name="Chinese_google">"Chinese"</string>
    <string name="Auto_detect_micro">"Auto-detect language"</string>
    <string name="Afrikaans_micro">"Afrikaans"</string>
    <string name="Arabic_micro">"Arabic"</string>
    <string name="Bulgarian_micro">"Bulgarian"</string>
    <string name="Bangla_micro">"Bangla"</string>
    <string name="Bosnian_micro">"Bosnian"</string>
    <string name="Catalan_micro">"Catalan"</string>
    <string name="Czech_micro">"Czech"</string>
    <string name="Welsh_micro">"Welsh"</string>
    <string name="Danish_micro">"Danish"</string>
    <string name="German_micro">"German"</string>
    <string name="Greek_micro">"Greek"</string>
    <string name="English_micro">"English"</string>
    <string name="Spanish_micro">"Spanish"</string>
    <string name="Estonian_micro">"Estonian"</string>
    <string name="Persian_micro">"Persian"</string>
    <string name="Finnish_micro">"Finnish"</string>
    <string name="Filipino_micro">"Filipino"</string>
    <string name="Fijian_micro">"Fijian"</string>
    <string name="French_micro">"French"</string>
    <string name="Irish_micro">"Irish"</string>
    <string name="Hebrew_micro">"Hebrew"</string>
    <string name="Hindi_micro">"Hindi"</string>
    <string name="Croatian_micro">"Croatian"</string>
    <string name="Haitian_Creole_micro">"Haitian Creole"</string>
    <string name="Hungarian_micro">"Hungarian"</string>
    <string name="Indonesian_micro">"Indonesian"</string>
    <string name="Icelandic_micro">"Icelandic"</string>
</resources>